--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "http://lwolbrink23.github.io/Exercise-App",
   "name": "portfolio",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -23,7 +26,8 @@
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^5.0.0"
   },
   "private": true
 }
