--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,6 +7,7 @@
     "start": "expo start",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
+    "build": "react-scripts build",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
