--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,9 +5,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build",
-    "build": "react-scripts build",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo export:web",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
